# Embedded-Benchmarking

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
esp32_D1_mini/py_benchmark/: bench.py
esp32_D1_mini/tinygo_benchmark/: tinygo_bench.go
esp_32_d1_mini/c/: .gitignore  sdkconfig  sdkconfig.old
esp_32_d1_mini/c/main/: main.c
esp_32_d1_mini/micropython/: bench.py
esp_32_d1_mini/tinygo/: tinygo_bench.go
main/: hello_world_main.c  main.c
main/c/: CMakeLists.txt  main.c
pico_pi_2w/c/: CMakeLists.txt  c_pico_bench.c
pico_pi_2w/c_becnhmark/: CMakeLists.txt  c_pico_bench.c  lwipopts.h
pico_pi_2w/c_benchmark/: lwipopts.h
pico_pi_2w/micropython/: bench.py
pico_pi_2w/python_benchmark/: bench.py
pico_pi_2w/tinygo/: go.mod  tinygo_becnh.go
pico_pi_2w/tinygo_benchmark/: firmware.uf2  tinygo_becnh.go
